[gd_scene load_steps=6 format=2]

[ext_resource path="res://Flipper.tscn" type="PackedScene" id=1]
[ext_resource path="res://TrapDoor.tscn" type="PackedScene" id=2]
[ext_resource path="res://Ball.tscn" type="PackedScene" id=3]
[ext_resource path="res://SpecialTest.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 68, 10 )

[node name="SpecialTest" type="Node2D"]
script = ExtResource( 4 )

[node name="Flipper" parent="." instance=ExtResource( 1 )]
position = Vector2( 178, 325 )
rotation_speed = 1200
is_flipped = true

[node name="Flipper2" parent="." instance=ExtResource( 1 )]
position = Vector2( 314, 325 )
rotation = -0.261799
rotation_speed = 1200

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PoolVector2Array( 279, 348, 273, 349, 324, 338, 331, 336, 326, 317, 464, 278, 465, 18, 17, 14, 16, 294, 166, 320, 167, 334, 206, 347, 198, 359, -1, 307, 0, -1, 478, 1, 479, 361, 300, 363 )

[node name="Ball" parent="." instance=ExtResource( 3 )]
position = Vector2( 196, 143 )

[node name="TrapDoor" parent="." instance=ExtResource( 2 )]
position = Vector2( 354, 88 )
is_teleport = false
my_time = 1.2

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 247, 374 )
shape = SubResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = 277.0
margin_top = 81.0
margin_right = 378.0
margin_bottom = 95.0
text = "Success ->     <-"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="ball_trapped" from="TrapDoor" to="." method="_on_TrapDoor_ball_trapped"]
[connection signal="door_timed_out" from="TrapDoor" to="." method="_on_TrapDoor_door_timed_out"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
